2003-06-06  David Brennan  <eCos@brennanhome.com>
2003-06-23  Nick Garnett  <nickg@balti.calivar.com>

	* cdl/kernel.cdl: Added tests/bin_sem3 to list of kernel tests.

	* include/sema.hxx: Added declaration for wait with timeout for
        Cyg_Binary_Semaphore.
	
	* include/instrmnt.h: Added instrumentation point for binary semaphore
        timeout.
	
        * src/sync/bin_sem.cxx: Added wait with time-out function to 
        Cyg_Binary_Semaphore class. 

	* src/sync/cnt_sem.cxx: Modified semantics slightly to claim an
	available semaphore even with a timeout in the past. This is in
	line with the new timed wait in bin_sem.cxx. 

	* tests/bin_sem3.cxx: Created new test for timed wait binary
        semaphore.
		
2003-05-20  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/common/kapi.cxx (cyg_thread_get_next): Passing a *current
	pointer as NULL if how you start the walk of the linked list. So
	don't assert on NULL. Reported by Daniel Lidsten.

2003-05-05  Gary Thomas  <gary@mlbassoc.com>

	* tests/tm_basic.cxx: Support new option controlling number of times
	this test runs.  This is useful for long-term stress and performance
	analysis.

2003-05-03  Jonathan Larmour  <jifl@eCosCentric.com>

	* include/mqueue.inl (Cyg_Mqueue::get): Fix invalid loop termination
	cheque for whether busy or not.
	(Cyg_Mqueue::put): Ditto.

2003-03-03  Jonathan Larmour  <jifl@eCosCentric.com>

	* tests/fptest.c: Make all variables static to avoid any risk
	of collisions with symbols defined elsewhere in eCos.

2003-02-27  Jonathan Larmour  <jifl@eCosCentric.com>

	* include/kapidata.h: Revert change of 2001-08-23 and instead make
	it conditional on the GCC version. Also add comments explaining why
	this file has been apparently obfuscated.

2003-02-25  Nick Garnett  <nickg@calivar.com>

	* tests/fptest.c (alarm_fn): Added CYG_TEST_PASS() call to keep
	configtool happy.

2003-02-24  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/kernel.cdl: Update doc links.
	* cdl/synch.cdl: Ditto.